aspect ratio fix on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -147,8 +147,9 @@ h2 {
     display: block;
     border-radius: 0.3rem;
     padding: 0.2rem;
-    aspect-ratio: 1/1;
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .img-box {
